# Graphics_Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: imgui.ini  imgui_log.txt
Engine/Headers/: AbstractCamera.h  AlphabetAtlas.h  Batch.h  Camera.h  ColoredCube.h  Font.h  FontManager.h  GameObject.h  Grid.h  HeightMap.h  Light.h  Logger.h  MandelBox.h  Mesh.h  MineField.h  Model.h  ModelComponent.h  Multibrot.h  Plane.h  Quad.h  RayMarcher.h  RayTracer.h  Renderer.h  SkyBox.h  SphereUBO.h  Terrain.h  TerrainBlock.h  WaterPlane.h  stb_image_write.h
Engine/Headers/2D/: 2D_Objects.h  CameraController_2D.h  Camera_2D.h  RenderingLayer_2D.h  SceneControl_2D.h  Scene_2D.h
Engine/Headers/2D/Objects/: Circle.h  Line.h  Object_2D.h  PixMap.h  Polygon.h  Rectangle.h  Triangle.h
Engine/Headers/3D/: 3D_Objects.h  CameraController_3D.h  Camera_3D.h  CenteredPoint_CameraController.h  CenteredPoint_SceneController.h  FPS_CameraController.h  FPS_SceneController.h  RenderingLayer_3D.h  SceneControl_3D.h  Scene_3D.h
Engine/Headers/3D/Objects/: ColorfulIcosphere.h  Icosphere.h  Line.h  Object_3D.h  Plane.h  SkyBox.h  Sphere.h  Terrain.h  Text.h  Text_3D.h  TexturedIcosphere.h  TexturedSphere.h
Engine/Headers/AbstractClasses/: Renderable.h
Engine/Headers/Components/: CameraHook.h  Component.h  ComponentTypes.h  Lighting.h  ShaderParameters.h  Surface.h  Transform.h
Engine/Headers/Core/: BufferLayout.h  Common.h  Cubemap.h  FrameBuffer.h  IndexBuffer.h  ShaderProgram.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
Engine/Headers/Events/: ApplicationEvent.h  Event.h  ImGuiEvents.h  MouseEvent.h
Engine/Headers/Geometry/: Cube.h  LightAnchor.h  Plane.h  Sphere.h
Engine/Headers/Layers/: BaseSceneController.h  CameraLayer.h  ImGuiActivationLayer.h  ImGuiController.h  ImGuiParams.h  KeyboardControlLayer.h  Layer.h  LayerStack.h  ModelParams.h  RenderingLayer.h  SceneViewControlLayer.h
Engine/Headers/ShaderComponent/: DirectionalLight.h
Engine/Headers/ShaderComponents/: DirectionalLight.h  PointLight.h  Shaded.h  SurfaceParameters.h
Engine/Headers/Systems/: ComponentsManager.h  LightingManager.h  RenderingManager.h
Engine/Headers/Tests/: DebugTest.h  ImGuiParams.h  Test.h
Engine/Headers/Uniforms/: UniformTypes.h  UniformValue.h  Uniforms.h
Engine/Headers/Utilities/: Maths.h
Engine/Headers/Window/: Application.h  ApplicationEvent.h  Event.h  ImGuiLayer.h  Input.h  Layer.h  LayerStack.h  MouseEvent.h  Window.h
Engine/Headers/Window/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Shaders/: 2D_image.glsl  alphabet.glsl  bald_geometry_objects.glsl  geometry_objects.glsl  mandelbox.glsl  mandelbox.shader  mandelbulb.glsl  mandelbulb.shader  mesh.shader  model.glsl  model.shader  raymarcher_pbr_ibl.glsl  raymarcher_pbr_ibl.shader  raymarcher_scene1.glsl  skybox.glsl  skybox.shader  terrain.glsl
Engine/Shaders/2D/: quad.glsl  single_colored.glsl  text_rendering.glsl
Engine/Shaders/3D/: mine_sphere.glsl  single_colored.glsl  skybox.glsl  text_3d.glsl
Engine/Shaders/Cubemap/: equirectangular2cubemap.glsl  irradiance.glsl
Engine/Shaders/Filters/: blur.glsl  edge_detection.glsl  grayscale.glsl  inversion.glsl  kernel.glsl  texture.glsl
Engine/Sources/: AlphabetAtlas.cpp  Batch.cpp  Camera.cpp  ColoredCube.cpp  GameObject.cpp  Grid.cpp  HeightMap.cpp  Logger.cpp  MandelBox.cpp  Mesh.cpp  Model.cpp  ModelComponent.cpp  Multibrot.cpp  Plane.cpp  Quad.cpp  RayMarcher.cpp  RayTracer.cpp  Renderer.cpp  ShaderProgram.cpp  SkyBox.cpp  SphereUBO.cpp  Terrain.cpp  TerrainBlock.cpp  WaterPlane.cpp  WaterScene.cpp
Engine/Sources/Core/: BufferLayout.cpp  Common.cpp  Cubemap.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/Sources/Geometry/: Cube.cpp  Plane.cpp  Sphere.cpp
Engine/Sources/Layers/: ImGuiController.cpp  ImGuiParams.cpp
Engine/Sources/ShaderComponent/: DirectionalLight.cpp
Engine/Sources/ShaderComponents/: DirectionalLight.cpp  PointLight.cpp  Shaded.cpp  SurfaceParameters.cpp
Engine/Sources/Systems/: ComponentsManager.cpp  LightingManager.cpp  RenderingManager.cpp
Engine/Sources/Tests/: DebugTest.cpp  ImGuiParams.cpp  Test.cpp
Engine/Sources/Window/: Application.cpp  ImGuiActivationLayer.cpp  ImGuiLayer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Window.cpp
Main/: EntryPoint.cpp
Samples/: 3d_scene_app.cpp  application_test.cpp  batch_rendering.cpp  drawing_app.cpp  geometry_viewer.cpp  geometry_viewer_app.cpp  mandelbox.cpp  mandelbulb.cpp  model_viewer.cpp  model_viewer_app.cpp  modelviewer.cpp  raymarching_scene.cpp  raymarching_scene_app.cpp  terrain_editor.cpp  terrain_viewer.cpp  terrain_viewer_app.cpp
